--- a/members/mary.html
+++ b/members/mary.html
@@ -35,7 +35,7 @@
           <button
             class="btn-primary"
             style="border-radius: 0.4rem"
-            onclick="window.location.href='../src/mary/index.html'"
+            onclick="window.location.href='https://casio01343.github.io/mary-joy/'"
           >
             View Site
           </button>
