--- a/members/mary.html
+++ b/members/mary.html
@@ -12,7 +12,7 @@
     <header>
       <img
         src="../logo/mary.jfif"
-        alt="Elmar Logo"
+        alt="Mary's Logo"
         style="width: 50px; border-radius: 50%"
       />
       <h1>Mary Joy F. Casio - Full Information</h1>
