--- a/members/mary.html
+++ b/members/mary.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <img
-        src="../logo/mary.jfif"
+        src="../images/logo.jfif"
         alt="Mary's Logo"
         style="width: 50px; border-radius: 50%"
       />
