--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meet Our Members - Food Style</title>
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="shortcut icon" href="logo/logo.jfif" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/logo.jfif" type="image/x-icon" />
     <style>
       .header-logo {
         width: 15%; /* Use percentage for responsiveness */
