--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header class="bg-success text-white text-center py-5">
-      <img src="logo/logo.jfif" alt="Logo" class="header-logo" />
+      <img src="images/logo.jfif" alt="Logo" class="header-logo" />
       <h1>Meet Our Members</h1>
       <p>Get to know the talented individuals behind Food Style</p>
       <a href="index.html" class="btn btn-light btn-lg">Back to Home</a>
