--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="shortcut icon" href="logo/logo.jfif" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/logo.jfif" type="image/x-icon" />
   </head>
   <body>
     <header class="bg-success text-white text-center py-5">
