--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@
               <p class="card-text">Recipe Tester</p>
               <button
                 class="btn btn-success"
-                onclick="location.href= 'members/riza.html'"
+                onclick="location.href= 'https://garciariza001.github.io/Riza-Mae-Garcia-BSCS-3B/?fbclid=IwY2xjawGaU9dleHRuA2FlbQIxMAABHWKBlFalYpOvsNvP8otT4y5wkWdMfB5ZCYGcOWYYGoT9N6d8NzTtW4VLpA_aem_NzAGXPEmNcQQ8KlCbj0cyw'"
               >
                 View More
               </button>
