--- a/members/riza.html
+++ b/members/riza.html
@@ -6,12 +6,12 @@
     <title>Riza Mae M. Garcia - Full Information</title>
     <link rel="stylesheet" href="../css/members.css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="../logo/logo.jfif" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.jfif" type="image/x-icon" />
   </head>
   <body>
     <header>
       <img
-        src="../logo/riza.jfif"
+        src="../images/riza.jfif"
         alt="Elmar Logo"
         style="width: 50px; border-radius: 50%"
       />
