--- a/members/mary.html
+++ b/members/mary.html
@@ -6,7 +6,7 @@
     <title>Mary Joy F. Casio - Full Information</title>
     <link rel="stylesheet" href="../css/members.css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="../logo/logo.jfif" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.jfif" type="image/x-icon" />
   </head>
   <body>
     <header>
