--- a/members/riza.html
+++ b/members/riza.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <img
-        src="../images/riza.jfif"
+        src="../images/logo.jfif"
         alt="Elmar Logo"
         style="width: 50px; border-radius: 50%"
       />
