--- a/members/riza.html
+++ b/members/riza.html
@@ -35,7 +35,7 @@
           <button
             class="btn-primary"
             style="border-radius: 0.4rem"
-            onclick="window.location.href='../src/riza/index.html'"
+            onclick="window.location.href='https://garciariza001.github.io/Riza-Mae-Garcia-BSCS-3B/?fbclid=IwY2xjawGaU9dleHRuA2FlbQIxMAABHWKBlFalYpOvsNvP8otT4y5wkWdMfB5ZCYGcOWYYGoT9N6d8NzTtW4VLpA_aem_NzAGXPEmNcQQ8KlCbj0cyw'"
           >
             View Site
           </button>
