--- a/members/emilou.html
+++ b/members/emilou.html
@@ -6,12 +6,12 @@
     <title>Emilou C. Talacay - Full Information</title>
     <link rel="stylesheet" href="../css/members.css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="../logo/logo.jfif" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.jfif" type="image/x-icon" />
   </head>
   <body>
     <header>
       <img
-        src="../logo/emilou.jfif"
+        src="../images/logo.jfif"
         alt="Elmar Logo"
         style="width: 50px; border-radius: 50%"
       />
@@ -44,7 +44,7 @@
       </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-      <p>&copy; 2023 Food Thribe. All rights reserved.</p>
+      <p>&copy; 2024 Food Thribe. All rights reserved.</p>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
   </body>
