--- a/members/emilou.html
+++ b/members/emilou.html
@@ -12,7 +12,7 @@
     <header>
       <img
         src="../images/logo.jfif"
-        alt="Elmar Logo"
+        alt="Emilou's Logo"
         style="width: 50px; border-radius: 50%"
       />
       <h1>Emilou C. Talacay - Full Information</h1>
