--- a/members/giralyn.html
+++ b/members/giralyn.html
@@ -12,7 +12,7 @@
     <header>
       <img
         src="../images/logo.jfif"
-        alt="Elmar Logo"
+        alt="Giralyn's Logo"
         style="width: 50px; border-radius: 50%"
       />
       <h1>Giralyn M. Malana - Full Information</h1>
