--- a/members/riza.html
+++ b/members/riza.html
@@ -12,7 +12,7 @@
     <header>
       <img
         src="../images/logo.jfif"
-        alt="Elmar Logo"
+        alt="Riza's Logo"
         style="width: 50px; border-radius: 50%"
       />
       <h1>Riza Mae M. Garcia - Full Information</h1>
