--- a/members/jamesmar.html
+++ b/members/jamesmar.html
@@ -6,13 +6,13 @@
     <title>Jamesmar Rasonabe - Full Information</title>
     <link rel="stylesheet" href="../css/members.css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="../logo/logo.jfif" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.jfif" type="image/x-icon" />
   </head>
   <body>
     <header>
       <img
-        src="../logo/jamesmar.jfif"
-        alt="Elmar Logo"
+        src="../images/logo.jfif"
+        alt="Jamesmar's Logo"
         style="width: 50px; border-radius: 50%"
       />
       <h1>Jamesmar Rasonabe - Full Information</h1>
@@ -44,7 +44,7 @@
       </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-      <p>&copy; 2023 Food Thribe. All rights reserved.</p>
+      <p>&copy; 2024 Food Thribe. All rights reserved.</p>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
   </body>
