--- a/members/balondo.html
+++ b/members/balondo.html
@@ -6,11 +6,11 @@
     <title>Elmar Balondo - Full Information</title>
     <link rel="stylesheet" href="../css/members.css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
-    <link rel="shortcut icon" href="../logo/logo.jfif" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.jfif" type="image/x-icon" />
   </head>
   <body>
     <header>
-      <img src="../logo/balondo-logo.jfif" alt="Elmar Logo" />
+      <img src="../images/logo.jfif" alt="Elmar Logo" />
       <h1>Elmar Balondo - Full Information</h1>
     </header>
 
@@ -40,7 +40,7 @@
       </section>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-      <p>&copy; 2023 Food Style. All rights reserved.</p>
+      <p>&copy; 2024 Food Style. All rights reserved.</p>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
   </body>
