--- a/members/balondo.html
+++ b/members/balondo.html
@@ -31,7 +31,7 @@
           <button
             class="btn-primary"
             style="border-radius: 0.4rem"
-            onclick="window.location.href='../src/balondo/index.html'"
+            onclick="window.location.href='https://balondo01.github.io/Elmar-Balondo-BSCS-3B/'"
           >
             View Site
           </button>
