--- a/members/emilou.html
+++ b/members/emilou.html
@@ -35,7 +35,7 @@
           <button
             class="btn-primary"
             style="border-radius: 0.4rem"
-            onclick="window.location.href='../src/emilou/index.html'"
+            onclick="window.location.href='https://emilou002.github.io/Emilou-Talacay-BSCS---3B/?fbclid=IwY2xjawGarDxleHRuA2FlbQIxMAABHXxgq5MBtzLk1nrEW-UsFBlQLmNcH5xUqVeUeJHvvbv1phMCETSZKnIU8g_aem_M9LVZtDq6Xr6kyFj7QjciQ'"
           >
             View Site
           </button>
