--- a/members/jamesmar.html
+++ b/members/jamesmar.html
@@ -35,7 +35,7 @@
           <button
             class="btn-primary"
             style="border-radius: 0.4rem"
-            onclick="window.location.href='../src/jamesmar/index.html'"
+            onclick="window.location.href='https://rasonabe6.github.io/Jamesmar-Rasonabe-BSCS-3B/'"
           >
             View Site
           </button>
