--- a/members/giralyn.html
+++ b/members/giralyn.html
@@ -35,7 +35,7 @@
           <button
             class="btn-primary"
             style="border-radius: 0.4rem"
-            onclick="window.location.href='../src/geralyn/index.html'"
+            onclick="window.location.href='link to giralyn: https://giralyn001.github.io/Giralyn-Malana-BSCS--3B/'"
           >
             View Site
           </button>
