--- a/members/giralyn.html
+++ b/members/giralyn.html
@@ -35,7 +35,7 @@
           <button
             class="btn-primary"
             style="border-radius: 0.4rem"
-            onclick="window.location.href='link to giralyn: https://giralyn001.github.io/Giralyn-Malana-BSCS--3B/'"
+            onclick="window.location.href='https://giralyn001.github.io/Giralyn-Malana-BSCS--3B/?fbclid=IwY2xjawGaualleHRuA2FlbQIxMAABHXpL7DHCll1zzcZc8TG9Z5heGA-ttZ1bJt-vXTfacSiPoqlT7rqOn8d_bQ_aem_D2NJ6KOVVQ1sNhx34qPbYg'"
           >
             View Site
           </button>
